[package]
name = "gpu-trace-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
csv = "1"
flate2 = "1"
ratatui = "0.29"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
